<resources>
    <string name="app_name">AppDoggo</string>
    <string name="title_reg">Регистрация</string>
    <string name="title_auth">Авторизация</string>
    <string name="title_friends">Друзья</string>
    <string name="title_add_friends">Отправить запрос на дружбу</string>
    <string name="title_main_page">Главная страница</string>
    <string name="enter_login">Введите адрес электронной почты</string>
    <string name="enter_password">Введите пароль</string>
    <string name="text_on_register_button">Зарегистрироваться</string>
    <string name="text_on_login_button">Авторизация</string>
    <string name="pass">Пропустить</string>
    <string name="error_network">Проблема с интернет подключением</string>
    <string name="error_server">Проблема с подключением к серверу</string>
    <string name="error_username_already_exist">Имя пользователя уже занято</string>
    <string name="name_in_navigation">Имя пользователя</string>
    <string name="status_in_navigation">Статус пользователя</string>
    <string name="chat">Чаты</string>
    <string name="settings">Настройки</string>
    <string name="friends">Друзья</string>
    <string name="logout">Выход</string>
    <string name="profile">Профиль</string>
    <string name="main_page">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="sendRequest">Отправить запрос</string>
    <string name="places">Места</string>
    <string name="welcome">Добро пожаловать</string>
</resources>
