<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:padding="8dp"
    android:textAlignment="textEnd">


    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:backgroundTint="@color/whiteAccent"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:hint="@string/enter_login"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textDirection="firstStrong"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:backgroundTint="@color/whiteAccent"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/title_auth"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        tools:ignore="MissingConstraints,RtlCompat"
        tools:layout_editor_absoluteX="-25dp"
        tools:layout_editor_absoluteY="25dp" />

    <LinearLayout
        android:id="@+id/button"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_marginTop="160dp"
        android:orientation="vertical"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center|top"
            android:text="@string/text_on_login_button"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>