<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigationView"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingTop="@dimen/nav_header_padding_top">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/chocolate">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileContainer"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:layout_marginBottom="4dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUserImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="25dp"
                android:background="@drawable/circle_circle"
                android:src="@drawable/contact_photo_sample"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="@dimen/medium_margin"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivUserImage"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:fontFamily="@font/lato"
                    android:lines="1"
                    android:text="@string/name_in_navigation"
                    android:textColor="#E0E0E0"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvUserStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/lato"
                    android:lines="1"
                    android:text="@string/status_in_navigation"
                    android:textColor="#8F8F8F" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/lineBetweenLayouts"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileContainer"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:id="@+id/rlChats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:id="@+id/llChats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgvChats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/message_button" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:layout_marginRight="@dimen/small_margin5"
                    android:fontFamily="@font/lora"
                    android:gravity="start|center_vertical"
                    android:text="@string/chat"
                    android:textColor="#E0E0E0"
                    android:textSize="22sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgvSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/settings_button" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:fontFamily="@font/lora"
                android:textColor="#E0E0E0"
                android:layout_marginRight="@dimen/small_margin5"
                android:gravity="start|center_vertical"
                android:text="@string/settings"
                android:textSize="22sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btnFriendsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:layout_gravity="bottom"
            android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/llFriendsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgvFriendsList"
                android:layout_width="39dp"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:src="@drawable/friends_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:fontFamily="@font/lora"
                android:textColor="#E0E0E0"
                android:layout_marginRight="@dimen/small_margin5"
                android:gravity="start|center_vertical"
                android:text="@string/friends"
                android:textSize="22sp" />
        </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_gravity="bottom"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/llloginout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgvloginout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_margin5"
                android:src="@drawable/loginout"
                android:tint="@color/almostChocolate"/>

            <TextView
                android:id="@+id/txtvloginout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin5"
                android:gravity="start|center_vertical"
                android:fontFamily="@font/lora"
                android:textColor="#E0E0E0"
                android:text="@string/logout"
                android:textSize="20sp"/>

        </LinearLayout>
    </RelativeLayout>


</com.google.android.material.navigation.NavigationView>